--- a/bootstrap3/index.html
+++ b/bootstrap3/index.html
@@ -12,7 +12,31 @@
 
   <body>
 
+    <div class="container">
+        <div class="page-header">
+          <h1>My header text</h1>
+          <p class ="lead">This is my 2 column layout</p>
+        </div>
+
+        <h3>My page content</h3>
+        <div class="row">
+
+          <article class="col-md-8">
+            <h3>Welcom to the web</h3>
+            <p>Lorem ipsum goes here............... </p>
+          </article>
+
+          <aside class="col-md-4">
+            <h3>Aside Content</h3>
+            <ul>
+              <li>item 1</li>
+              <li>item 2</li>
+              <li>item 3</li>
+            </ul>
+
+          </aside>
+        </div>
+    </div>
 
   </body>
-
 </html>
