--- a/bootstrap3/index.html
+++ b/bootstrap3/index.html
@@ -18,7 +18,6 @@
           <p class ="lead">This is my 2 column layout</p>
         </div>
 
-        <h3>My page content</h3>
         <div class="row">
 
           <article class="col-md-8">
@@ -37,6 +36,14 @@
           </aside>
         </div>
     </div>
+
+    <footer class="container">
+      <div class="footer">
+        <h4>Footer/Legal Content</h4>
+        <p>&copy; 2015 Charlie Powell</p>
+
+      </div>
+    </footer>
 
   </body>
 </html>
