--- a/bootstrap3/index.html
+++ b/bootstrap3/index.html
@@ -8,9 +8,30 @@
     <meta name="author" content="Charles Powell">
     <title>Bootstrap Two-Column Boilerplate</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+
+    <nav class = "navbar navbar-default navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
+          </a>
+            <a class ="navbar-brand" href="#">My App Title</a>
+        </div><!-- end navbar branding-->
+
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Contact</a></li>
+          </ul>
+        </div><!-- end navbar links-->
+
+      </div>
+    </nav>
 
     <div class="container">
         <div class="page-header">
@@ -21,8 +42,27 @@
         <div class="row">
 
           <article class="col-md-8">
-            <h3>Welcom to the web</h3>
-            <p>Lorem ipsum goes here............... </p>
+            <!-- start slipsum code -->
+
+<h3>Is she dead, yes or no?</h3>
+<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb. </p>
+
+<h3>We happy?</h3>
+<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass mothercussin' house, cussin' up the way the he talks. Mothercusser do that cuss to me, he better paralyze my ass, 'cause I'll kill the mothercusser, know what I'm sayin'? </p>
+
+<h3>I gotta piss</h3>
+<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that cuss? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that cuss.  </p>
+
+<h3>Is she dead, yes or no?</h3>
+<p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man. </p>
+
+<!-- please do not remove this line -->
+
+<div style="display:none;">
+<a href="http://slipsum.com">lorem ipsum</a></div>
+
+<!-- end slipsum code -->
+
           </article>
 
           <aside class="col-md-4">
